testsuite/tests/grammar/invalid_lexers/spacing_2.lkt
from common import Example

lexer foo_lexer {
    @unparsing_spacing(with=1)
    family fam {
        Example <- "example"
    }
}
